[package]
name = "antikythera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["clock"] }
euclid = "0.22.9"
sdl2 = { version = "0.36.0", features = ["gfx", "image", "ttf"] }
